Fixed: Token Slider Current Overlap

--- a/app/components/Tokens/View/AmountSlider.css
+++ b/app/components/Tokens/View/AmountSlider.css
@@ -8,11 +8,17 @@
 }
 
 .amount {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   font-family: "Source Code Pro", monospace;
   font-size: 20px;
   font-weight: 600;
   float: right;
   margin-bottom: 10px;
+  z-index: 5;
+  width: 100%;
 }
 
 .sliderRange {
@@ -49,12 +55,9 @@
 }
 
 .input {
-  position: absolute;
-  right: 45px;
-  top: -6px;
   z-index: 4;
   height: 30px;
-  min-width: 330px;
+  flex-grow: 1;
 }
 
 .input input {
@@ -64,7 +67,13 @@
   text-align: right;
   background: transparent;
   height: 30px;
+  line-height: 30px;
   outline: none;
   border: none;
-  min-width: 330px;
+  padding: 0;
+  width: 100%;
+}
+
+.amountLabel {
+
 }
